--- a/lerna.json
+++ b/lerna.json
@@ -1,20 +1,14 @@
 {
-  "version": "independent",
+  "packages": [
+    "packages/*"
+  ],
   "command": {
-    "init": {
-      "exact": true
-    },
     "publish": {
-      "allowBranch": "master",
-      "conventionalCommits": true,
       "message": "chore(release): publish",
       "ignoreChanges": [
-        "*.md",
-        "**/example/**",
-        "**/test/**"
+        "*.md"
       ]
     }
   },
-  "npmClient": "yarn",
-  "useWorkspaces": true
+  "version": "independent"
 }
