--- a/packages/toast/package.json
+++ b/packages/toast/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "@yy/yym-toast",
+  "name": "@jr93/toast",
   "private": false,
   "version": "0.0.0",
-  "description": "toast vue component for yy mobile",
+  "description": "toast vue component",
   "main": "lib/index.min.js",
   "module": "index.js",
   "scripts": {
     "build": "rimraf lib && webpack --config ../../build/webpack.umd.js"
   },
   "author": "guojinrong@yy.com",
-  "license": "MIT"
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  }
 }
