--- a/package.json
+++ b/package.json
@@ -45,13 +45,21 @@
     "husky": "^1.1.3",
     "lerna": "^3.4.3",
     "lint-staged": "^8.0.4",
-    "node-sass": "^4.9.4",
+    "node-sass": "^4.10.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.3.0",
     "postcss-pxtorem": "^4.0.1",
     "prettier": "^1.14.3",
     "rimraf": "^2.6.2",
+    "rollup": "^0.67.0",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-css-only": "^0.4.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-postcss": "^1.6.2",
+    "rollup-plugin-terser": "^3.0.0",
+    "rollup-plugin-vue": "4.4.0-alpha.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
