chore(toast): add publishConfig for toast package

--- a/packages/toast/package.json
+++ b/packages/toast/package.json
@@ -13,6 +13,10 @@
   "scripts": {
     "build": "rimraf lib && rollup --config ../../build/rollup.component.js"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "JR93 <gjr_china@163.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "gitHead": "1a0f8617497a6eefc911ef400392877fd86276db"
 }
