chore(toast): add publishConfig for toast package

--- a/packages/toast/package.json
+++ b/packages/toast/package.json
@@ -17,6 +17,5 @@
     "access": "public"
   },
   "author": "JR93 <gjr_china@163.com>",
-  "license": "MIT",
-  "gitHead": "1a0f8617497a6eefc911ef400392877fd86276db"
+  "license": "MIT"
 }
