--- a/packages/toast/package.json
+++ b/packages/toast/package.json
@@ -2,7 +2,7 @@
   "name": "@mu-ui/mu-toast",
   "private": false,
   "version": "0.1.2",
-  "description": "toast vue component",
+  "description": "toast vue component for vue 2.x",
   "keywords": [
     "toast",
     "vue",
