--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "release": "lerna publish --conventional-commits"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
