--- a/packages/toast/package.json
+++ b/packages/toast/package.json
@@ -2,11 +2,11 @@
   "name": "@mu-ui/mu-toast",
   "private": false,
   "version": "0.1.3",
-  "description": "toast vue component for vue 2.x",
+  "description": "toast vue plugin for vue 2.x",
   "keywords": [
     "toast",
     "vue",
-    "components"
+    "plugin"
   ],
   "main": "lib/index.common.js",
   "module": "lib/index.esm.js",
