refactor(indicator): refactor & complete doc

--- a/packages/indicator/package.json
+++ b/packages/indicator/package.json
@@ -2,11 +2,11 @@
   "name": "@mu-ui/mu-indicator",
   "version": "0.2.3",
   "private": false,
-  "description": "indicator vue component for vue 2.x",
+  "description": "indicator vue plugin for vue 2.x",
   "keywords": [
     "indicator",
     "vue",
-    "components"
+    "plugin"
   ],
   "main": "lib/index.common.js",
   "module": "lib/index.esm.js",
@@ -18,7 +18,6 @@
   },
   "author": "JR93 <gjr_china@163.com>",
   "license": "MIT",
-  "gitHead": "674844ac63d49674a49a0354825a8d79fff0a8ab",
   "dependencies": {
     "@mu-ui/mu-loading": "^0.1.1"
   }
