--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "release": "lerna publish --conventional-commits"
   },
   "dependencies": {
+    "@mu-ui/mu-infinite-loading": "^0.1.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
