--- a/packages/dialog/package.json
+++ b/packages/dialog/package.json
@@ -9,10 +9,10 @@
     "component",
     "plugin"
   ],
-  "main": "lib/index.common.js",
-  "module": "lib/index.esm.js",
+  "main": "dist/index.common.js",
+  "module": "dist/index.esm.js",
   "scripts": {
-    "build": "rimraf lib && rollup --config ../../build/rollup.component.js"
+    "build": "rimraf dist && rollup --config ../../build/rollup.component.js"
   },
   "publishConfig": {
     "access": "public"
