--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "release": "lerna publish --conventional-commits"
   },
   "dependencies": {
-    "@mu-ui/mu-infinite-loading": "^0.1.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
@@ -54,7 +53,7 @@
     "postcss-pxtorem": "^4.0.1",
     "prettier": "^1.14.3",
     "rimraf": "^2.6.2",
-    "rollup": "^0.67.0",
+    "rollup": "^0.67.4",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-css-only": "^0.4.0",
@@ -86,7 +85,7 @@
       ]
     },
     "ignore": [
-      "**/lib/*.min.js"
+      "**/dist/*.js"
     ]
   },
   "config": {
