--- a/package.json
+++ b/package.json
@@ -1,60 +1,79 @@
 {
   "name": "mu-ui",
   "private": true,
-  "repository": "git@github.com:JR93/mu-ui.git",
+  "description": "Mobile UI components & plugins for Vue",
   "author": "JR93 <gjr_china@163.com>",
   "scripts": {
     "commit": "git-cz",
     "dev": "webpack-dev-server --config build/webpack.dev.js",
     "build": "lerna run build",
     "lint": "eslint --fix --ext .js,.vue .",
+    "test": "jest -c config/jest.config.js",
+    "test:watch": "jest -c config/jest.config.js --watch",
+    "test:clear": "jest -c config/jest.config.js --clearCache",
+    "test:coverage": "node test/coverage.js",
     "release": "lerna publish --conventional-commits"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:mu-ui/mu-ui.git"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@mu-ui/mui"
+    ]
+  },
+  "eslintIgnore": [
+    "**/node_modules/**",
+    "dev/",
+    "test/",
+    "**/dist/**",
+    "*.json",
+    "*.html"
+  ],
   "dependencies": {
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
+    "@babel/core": "^7.2.2",
     "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/runtime": "^7.1.2",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/runtime": "^7.2.0",
     "@babel/runtime-corejs2": "^7.1.2",
     "@commitlint/cli": "^7.2.1",
     "@commitlint/config-conventional": "^7.1.2",
-    "babel-eslint": "^10.0.1",
+    "@vue/test-utils": "^1.0.0-beta.27",
+    "@mu-ui/eslint-config-mui": "^1.0.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "commitizen": "^3.0.4",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "cssnano": "^4.1.7",
     "cz-conventional-changelog": "^2.1.0",
-    "eslint": "^5.8.0",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-config-standard": "^12.0.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.0.0-beta.3",
     "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.1.3",
+    "jest": "^23.6.0",
+    "jest-serializer-vue": "^2.0.2",
     "lerna": "^3.4.3",
     "lint-staged": "^8.0.4",
     "node-sass": "^4.10.0",
+    "opn": "^5.4.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.3.0",
     "postcss-pxtorem": "^4.0.1",
     "prettier": "^1.14.3",
     "rimraf": "^2.6.2",
-    "rollup": "^0.67.4",
-    "rollup-plugin-babel": "^4.0.3",
+    "rollup": "^0.67.0",
+    "rollup-plugin-babel": "4.1.0-0",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-css-only": "^0.4.0",
     "rollup-plugin-node-resolve": "^3.4.0",
@@ -64,6 +83,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
+    "vue-jest": "^3.0.2",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.23.1",
