--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-node_modules/
-dev/
-#packages/**/dist/*
+*.log*
+.cache
 .DS_Store
-.vscode
-*.log
 .idea
-.changelog/
+.vscode
+.changelog
+
+node_modules
+
+dev
+packages/**/dist/*
+test/coverage/*
+
