--- a/packages/qrcode/package.json
+++ b/packages/qrcode/package.json
@@ -1,23 +1,24 @@
 {
   "name": "@mu-ui/mu-qrcode",
-  "version": "0.1.4",
   "private": false,
+  "version": "0.1.4",
   "description": "qrcode vue component for vue 2.x",
+  "author": "JR93 <gjr_china@163.com>",
+  "license": "MIT",
+  "main": "dist/index.common.js",
+  "module": "dist/index.esm.js",
+  "typings": "types/index.d.ts",
+  "scripts": {
+    "build": "rimraf dist && rollup --config ../../build/rollup.component.js"
+  },
   "keywords": [
     "qrcode",
     "vue",
     "components"
   ],
-  "main": "dist/index.common.js",
-  "module": "dist/index.esm.js",
-  "scripts": {
-    "build": "rimraf dist && rollup --config ../../build/rollup.component.js"
-  },
   "publishConfig": {
     "access": "public"
   },
-  "author": "JR93 <gjr_china@163.com>",
-  "license": "MIT",
   "dependencies": {
     "qrcode": "^1.3.2"
   }
