--- a/packages/toast/package.json
+++ b/packages/toast/package.json
@@ -3,19 +3,20 @@
   "private": false,
   "version": "0.1.10",
   "description": "toast vue plugin for vue 2.x",
+  "author": "JR93 <gjr_china@163.com>",
+  "license": "MIT",
+  "main": "dist/index.common.js",
+  "module": "dist/index.esm.js",
+  "typings": "types/index.d.ts",
+  "scripts": {
+    "build": "rimraf dist && rollup --config ../../build/rollup.component.js"
+  },
   "keywords": [
     "toast",
     "vue",
     "plugin"
   ],
-  "main": "dist/index.common.js",
-  "module": "dist/index.esm.js",
-  "scripts": {
-    "build": "rimraf dist && rollup --config ../../build/rollup.component.js"
-  },
   "publishConfig": {
     "access": "public"
-  },
-  "author": "JR93 <gjr_china@163.com>",
-  "license": "MIT"
+  }
 }
