--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "commit": "git-cz",
     "dev": "webpack-dev-server --config build/webpack.dev.js",
     "demo": "webpack-dev-server --config build/webpack.demo.js",
-    "build": "lerna run build",
+    "build": "node build/checkBuild.js",
     "lint": "eslint --fix --ext .js,.vue .",
     "test": "jest -c config/jest.config.js",
     "test:watch": "jest -c config/jest.config.js --watch",
@@ -66,6 +66,7 @@
     "jest-serializer-vue": "^2.0.2",
     "lerna": "^3.4.3",
     "lint-staged": "^8.0.4",
+    "loud-rejection": "^1.6.0",
     "node-sass": "^4.10.0",
     "opn": "^5.4.0",
     "postcss-import": "^12.0.1",
@@ -83,6 +84,8 @@
     "rollup-plugin-terser": "^3.0.0",
     "rollup-plugin-vue": "4.4.0-alpha.0",
     "sass-loader": "^7.1.0",
+    "shelljs": "^0.8.3",
+    "signale": "^1.3.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "vue-jest": "^3.0.2",
