--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "@babel/runtime-corejs2": "^7.1.2",
     "@commitlint/cli": "^7.2.1",
     "@commitlint/config-conventional": "^7.1.2",
-    "@vue/test-utils": "^1.0.0-beta.27",
     "@mu-ui/eslint-config-mui": "^1.0.0",
+    "@vue/test-utils": "^1.0.0-beta.27",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
@@ -81,6 +81,7 @@
     "rollup-plugin-css-only": "^0.4.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-postcss": "^1.6.2",
+    "rollup-plugin-progress": "^1.0.0",
     "rollup-plugin-terser": "^3.0.0",
     "rollup-plugin-vue": "4.4.0-alpha.0",
     "sass-loader": "^7.1.0",
